--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: "eclipse"
 apply plugin: "idea"
 apply plugin: "java"
+apply plugin: "application"
 
-sourceCompatibility = '10'
+mainClassName = "EngineLoader"
+sourceCompatibility = '11'
 	
 repositories {
 	mavenCentral()
@@ -12,18 +14,16 @@ sourceSets {
 	main {
 		java.srcDir("${projectDir}/src/main/java/")
 		resources.srcDir("${projectDir}/src/main/resources")
-	}
-		
+	}	
 	test {
-		java.srcDirs = ["${projectDir}/src/test/java/"]
+		java.srcDirs("${projectDir}/src/test/java/")
+		resources.srcDir("${projectDir}/src/test/resources")
 	}
 }
 
 dependencies {
 	compile project(':lightengine-client')
 	compile project(':lightengine-server')
-
-	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 subprojects {
@@ -34,5 +34,3 @@ subprojects {
 		maven { url "https://oss.sonatype.org/content/repositories/releases/" }
 	}
 }
-
-task wrapper(type: Wrapper) { gradleVersion = '4.6' }
